# pymor

./: .appveyor.yml  .codecov.yml  .coveragerc  .drone.yml  .env  .gitattributes  .gitconfig  .gitignore  .installed_pytest.ini  .landscape.yaml  .linkspector.yml  .mailmap  .markdown_link_check_config.json  .markdownlint.yml  .mega-linter.yml  .pre-commit-config.yaml  .readthedocs.yml  .requirements-pyside.txt  .travis.script.bash  .travis.simulate.py  .travis.yml  .travis.yml.py  3to2.sh  AUTHORS.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  LICENSE.txt  LICENSES_bundled.txt  MANIFEST.in  Makefile  README.markdown  README.md  README.rst  README.txt  RELEASE_CHECKLIST.md  _config.yml  (+44 more)
.binder/: Dockerfile  Dockerfile.in  docker-compose.yml  ipython_kernel_config.py  local-dev.Dockerfile
.binder/local_packages/: .gitignore
.ci/: CI_IMAGE_TAG  PYPI_MIRROR_TAG  appveyor.yml  check_mailmap.py  ci_dummy.ipynb  conda-env.yml  create_conda_env.py  fix_coverage_paths_windows.py  install_mesa.bat  installed_pytest.ini  replace_opengl_imp.reg  update_requirements_ci.bash  update_requirements_ci_fenics.bash
.ci/azure/: azure-pipelines.yml  pipeline-osx.yml  pipeline-win.yml  pymor_defaults.py_osx  run_tests.py
.ci/docker/: wipe_docs_container.bash
.ci/drone/: script.bash
.ci/gitlab/: Dockerfile.binder.base  Dockerfile.binder.tocopy  Dockerfile.ci-base.3_10  Dockerfile.ci-fenics-base.3_11  Dockerfile.ci-fenics.3_11  Dockerfile.ci.3_10  after_script.bash  check_image_in_registry.py  check_mailmap.py  ci.yml  ci_sanity_check.bash  common_test_setup.bash  coverage_submit.bash  cpp_demo.bash  deploy.bash  deploy_docs.bash  docs_deploy.bash  docs_housekeeping.sh  docs_makeindex.py  docs_update_versions.py  init_sshkey.bash  preflight.bash  pypi_deploy.bash  script.bash  submit.bash  template.ci.py  test_docs.bash  test_fenics.bash  test_fenics_mpi.bash  test_jupyter.bash  test_mpi.bash  test_mypy.bash  test_notebooks_dir.bash  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  auto-merge.yml  dependabot.yml  fix_coverage_paths_windows.py  labeler.yml  markdown_link_check_config.json
_layouts/: default.html
asv_results/: index.json  regressions.json
benchmarks/: algorithms.py  demos.py  reductors.py
debian/: README.Debian  README.source  changelog  control  copyright  docs  init.d.ex  make_packages.py  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  print-deps.pl  pymor-base.cron.d.ex  pymor-base.default.ex  pymor-base.doc-base.EX  pymor-base.install  pymor-demos.install  pymor.pth  pymordemos.pth  python-pymor-base.install  python-pymor-demos.install  python-pymor-doc.docs  python-pymor.install  python3-pymor-demos.install  python3-pymor-demos.lintian-overrides  python3-pymor.install  rules  watch.ex
docker/: Dockerfile  Dockerfile.binder.tocopy  Dockerfile.ci-current  Dockerfile.ci-fenics  Dockerfile.ci-fenicsx  Dockerfile.ci-oldest  Dockerfile.ci-preflight  dev-entrypoint.bash  docker-compose.yml  ipython_kernel_config.py
docs/: .gitignore  Makefile  NEW_MAIN_DEVS.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  conf.py  docutils.conf  fix_myst_in_notebook.py  fix_myst_in_notebooks.sh  gen_apidoc.py  generate_demo_docs.py  index.rst  modules.rst  pymordocstring.py  test_tutorials.py
docs/source/minimal_cpp_demo/: CMakeLists.txt  meson.build  model.cc  model.hh
esco18/: index.md
graveyard/: arguments.py  disk.py  gridbenchmark.py  prescribed.py  remote.py  remote_thermalblock.py  scalar.py
logo/: README.md
mass/: mass12.txt  mass16.txt  mass20.txt  mass24.txt  mass28.txt  mass32.txt  mass4.txt  mass40.txt  mass44.txt  mass52.txt  mass60.txt  mass8.txt
notebooks/: .gitignore  README.md  complex_op.ipynb  delay.ipynb  elliptic.ipynb  elliptic_oned.ipynb  heat.ipynb  heat_sink.ipynb  parametric_delay.ipynb  parametric_heat.ipynb  parametric_string.ipynb  parametric_synthetic.ipynb  string.ipynb  test.py  test_visualization.ipynb
pymor/: decorators.py  interfaces.py
results/: Hamiltonian_reconstruction_POD_12.txt  Hamiltonian_reconstruction_POD_16.txt  Hamiltonian_reconstruction_POD_20.txt  Hamiltonian_reconstruction_POD_24.txt  Hamiltonian_reconstruction_POD_32.txt  Hamiltonian_reconstruction_POD_4.txt  Hamiltonian_reconstruction_POD_44.txt  Hamiltonian_reconstruction_POD_52.txt  Hamiltonian_reconstruction_POD_60.txt  Hamiltonian_reconstruction_POD_8.txt  Hamiltonian_reconstruction_POD_PH_0.txt  Hamiltonian_reconstruction_POD_PH_12.txt  Hamiltonian_reconstruction_POD_PH_16.txt  Hamiltonian_reconstruction_POD_PH_20.txt  Hamiltonian_reconstruction_POD_PH_24.txt  Hamiltonian_reconstruction_POD_PH_32.txt  Hamiltonian_reconstruction_POD_PH_4.txt  Hamiltonian_reconstruction_POD_PH_44.txt  Hamiltonian_reconstruction_POD_PH_52.txt  Hamiltonian_reconstruction_POD_PH_60.txt  Hamiltonian_reconstruction_POD_PH_8.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_16.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_24.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_32.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_44.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_52.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_60.txt  Hamiltonian_reconstruction_POD_PH_just_Vr_8.txt  Hamiltonian_reconstruction_check_POD_12.txt  Hamiltonian_reconstruction_check_POD_16.txt  Hamiltonian_reconstruction_check_POD_20.txt  Hamiltonian_reconstruction_check_POD_24.txt  Hamiltonian_reconstruction_check_POD_32.txt  Hamiltonian_reconstruction_check_POD_4.txt  Hamiltonian_reconstruction_check_POD_44.txt  Hamiltonian_reconstruction_check_POD_52.txt  Hamiltonian_reconstruction_check_POD_60.txt  Hamiltonian_reconstruction_check_POD_8.txt  hamiltonian_plot_POD_16.txt  hamiltonian_plot_POD_24.txt  (+29 more)
src/: print_cache_db.py  pylint.cfg  pymor-demo  pymor-vis
src/pymordemos/minimal_cpp_demo/: CMakeLists.txt  bindings.py  buildit.sh  demo.py  discretization.cc  discretization.hh  model.cc  wrapper.py
testdata/: Massmatrix.mat  gmsh_1.geo  gmsh_1.msh  parameter_instationary.ini  parameter_stationary.ini  rhs1.mat
(+1040 files in other folders)
