[pycodestyle]
max-line-length = 120
max-doc-length = 100
ignore = E221,E226,E241,E242, E731, E741, W0105, W503, N803, N806
# E221 multiple spaces before operator
# E226 missing whitespace around arithmetic operator  [ignored by default]
# E241 multiple spaces after ':'                      [ignored by default]
# E242 tab after `,'                                  [ignored by default]
# E731 do not assign a lambda expression, use a def
# E741 do not use variables named 'l', 'O', or 'I'
# W0105 String statement has no effect (we use triple qoted strings as documentation in some files)
# W503 line break before binary operator
# N803 argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
# N806 same for variables in function

[flake8]
max-line-length = 120
max-doc-length = 100
ignore = E221,E226,E241,E242, E731, E741, W0105, W503, N803, N806
# The following exclude avoids wrong warnings for unused imports
exclude = __init__.py

[check-manifest]
ignore =
    .ci/*
    .ci
    *.yml
    *.yaml
    .mailmap
    docs/source/generated
    docs/source/generated/KEEPDIR
    .installed_pytest.ini

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pymor/version.py
# this is mandatory for the processed version.py to end up in .whl
versionfile_build = pymor/version.py
tag_prefix = ''

[tool:pytest]
testpaths = src/pymortests/
python_files = src/pymortests/*.py
python_classes = Test
pep8maxlinelength = 120
pep8ignore = E221,E226,E241,E242
addopts=-p no:warnings
junit_family=xunit2

[metadata]
# this is mandatory to lave license end up in .whl
license_file = LICENSE.txt
