[pycodestyle]
max-line-length = 120
max-doc-length = 100
ignore = E221,E226,E241,E242,E402,E731,E741,W0105, W503, N803, N806,\
  D100,D101,D102,D103,D105,D106,D107,\
  D400,D401,D414,\
  F403,F405,F722,\
  RST304,RST305
# E221 multiple spaces before operator
# E226 missing whitespace around arithmetic operator  [ignored by default]
# E241 multiple spaces after ':'                      [ignored by default]
# E242 tab after `,'                                  [ignored by default]
# E402 module level import not at top of file
# E731 do not assign a lambda expression, use a def
# E741 do not use variables named 'l', 'O', or 'I'
# F405, F403 star import usage from pymor.basic
# F722 syntax error in forward annotation
# W0105 String statement has no effect (we use triple qoted strings as documentation in some files)
# W503 line break before binary operator
# N803 argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
# N806 same for variables in function
# D10? missing docstring in module, function, method, magic, __init__, public nested class
# D40? first line ending with period, summary in imperative mood
# D414 "section has no content" Happens since flake8 looks for sections by name, not markup
#      (i.e. finds "empty" parameters section when used as an argument)

[flake8]
max-line-length = 120
max-doc-length = 100
ignore = E221,E226,E241,E242,E402,E731,E741,W0105,W503,N803,N806,\
  D100,D101,D102,D103,D105,D106,D107,\
  D400,D401,D414,\
  F403,F405,F722,\
  RST304,RST305
# The following exclude avoids wrong warnings for unused imports
exclude = __init__.py

[check-manifest]
ignore =
    .ci/*
    .ci
    *.yml
    *.yaml
    .mailmap
    docs/source/generated
    docs/source/generated/KEEPDIR
    .installed_pytest.ini

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/pymor/version.py
# this is mandatory for the processed version.py to end up in .whl
versionfile_build = pymor/version.py
tag_prefix = ''

[tool:pytest]
testpaths = src/pymortests/
python_files = src/pymortests/*.py
# exclude misbehaving plugin from auto load
addopts=-p no:nb_regression -p no:notebook -p no:memprof -p no:pytest-qt
junit_family=xunit2

[metadata]
# this is mandatory to lave license end up in .whl
license_file = LICENSE.txt

[coverage:run]
relative_files = True
source =
  src/pymor
  src/pymortests
  src/pymordemos
omit =
  src/pymor/version.py
